--- a/SFML/002.1 - 002.3/002.1 - 002.3.vcxproj
+++ b/SFML/002.1 - 002.3/002.1 - 002.3.vcxproj
@@ -145,7 +145,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="LiquidShape.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Movers.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="LiquidShape.h" />
+    <ClInclude Include="Movers.h" />
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
