--- a/SFML/003.1 - 003.3/003.1 - 003.3.vcxproj
+++ b/SFML/003.1 - 003.3/003.1 - 003.3.vcxproj
@@ -146,12 +146,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CapsuleObject.cpp" />
     <ClCompile Include="LiquidShape.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Object.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CapsuleObject.h" />
     <ClInclude Include="LiquidShape.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
