--- a/SFML/003.1 - 003.3/003.1 - 003.3.vcxproj.filters
+++ b/SFML/003.1 - 003.3/003.1 - 003.3.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="CapsuleObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ConvexPolygon.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LiquidShape.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CapsuleObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ConvexPolygon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
