--- a/SFML/003.1 - 003.3/003.1 - 003.3.vcxproj
+++ b/SFML/003.1 - 003.3/003.1 - 003.3.vcxproj
@@ -147,6 +147,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CapsuleObject.cpp" />
+    <ClCompile Include="ConvexPolygon.cpp" />
     <ClCompile Include="LiquidShape.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
@@ -154,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CapsuleObject.h" />
+    <ClInclude Include="ConvexPolygon.h" />
     <ClInclude Include="LiquidShape.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Object.h" />
